--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,138 @@
+
+
+
+/* 
+
+Samiyah website 
+
+1. Navbar
+2. Hero section
+
+
+
+
+*/
+
+
+
+
+
+
 @import 'reset.css'; 
+
+/* global classes */
+
+.container {
+    max-width: 100%;
+    padding: 0;
+    margin: 0;
+}
+.container-fluid {
+    padding-left: 0;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    background-color: #706B6B;
+}
+
+h1 {
+ font-family: 'Open Sans', sans-serif;
+ font-size: 2rem;
+}
+
+h2,h3,h4,h5,h6,p {
+   font-size: 1rem;
+   font-family: 'Lato', sans-serif;
+}
+
+/***********************************************************************/
+/* 1.Navbar Section */
+
+.custom-navbar {
+    background-color: #ffffff;
+    padding: 1.5rem 0rem;
+}
+
+.navbar-brand {
+    color: #011140;
+    font-family: 'Open Sans', sans-serif;
+    text-decoration: none;
+    padding: 0px 10px;
+}
+
+.navbar-brand:hover {
+    color: #011140;
+}
+
+.navbar-nav {
+    width: 100%;
+    justify-content: flex-end;
+}
+
+.navbar-nav .nav-item .nav-link {
+    color: #011140;
+    font-size: 1rem;
+    font-family: 'Lato', sans-serif;
+    font-weight: 600;
+}
+
+.navbar-nav .nav-item .nav-link:hover {
+    color: #f1c40f;
+}
+.navbar-nav .nav-link.active {
+    color: #f1c40f;
+}
+
+.divider {
+    border-right: 1px solid black;
+}
+
+.social-item {
+    margin-top: 5px;
+    margin-left: 12px;
+}
+
+.social-item .social-link-facebook {
+    background: #011140;
+    color:#ffffff;
+    padding: 0.6rem 0.8rem;
+    text-decoration: none;
+    font-size: 16px;
+    border-radius: 5px;
+}
+    
+
+
+
+
+/***********************************************************************/
+
+/* 2.Hero Section */
+
+.hero-box {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    width: 100%;
+    height: 800px;
+}
+
+.hero-box .left-box {
+    max-width: 100%;
+    height: 750px;
+}
+
+.hero-box .left-box img {
+    width: 100%;
+    height: 750px;
+}
+
+.hero-box .right-box .text-box {
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+}
+
+
+
+
