--- a/css/main.css
+++ b/css/main.css
@@ -37,26 +37,17 @@ body {
     background-color: #706B6B;
 }
 
-h1 {
- font-family: 'Open Sans', sans-serif;
- font-size: 2rem;
-}
-
-h2,h3,h4,h5,h6,p {
-   font-size: 1rem;
-   font-family: 'Lato', sans-serif;
-}
 
 /***********************************************************************/
 /* 1.Navbar Section */
 
 .custom-navbar {
-    background-color: #ffffff;
-    padding: 1.5rem 0rem;
+    background-color: #011140;
+    padding: 1.5rem 1rem;
 }
 
 .navbar-brand {
-    color: #011140;
+    color: #ffffff;
     font-family: 'Open Sans', sans-serif;
     text-decoration: none;
     padding: 0px 10px;
@@ -72,7 +63,7 @@ h2,h3,h4,h5,h6,p {
 }
 
 .navbar-nav .nav-item .nav-link {
-    color: #011140;
+    color: #ffffff;
     font-size: 1rem;
     font-family: 'Lato', sans-serif;
     font-weight: 600;
@@ -86,7 +77,7 @@ h2,h3,h4,h5,h6,p {
 }
 
 .divider {
-    border-right: 1px solid black;
+    border-right: 1px solid white;
 }
 
 .social-item {
@@ -95,12 +86,18 @@ h2,h3,h4,h5,h6,p {
 }
 
 .social-item .social-link-facebook {
-    background: #011140;
-    color:#ffffff;
+    background: #ffffff;
+    color:#011140;
     padding: 0.6rem 0.8rem;
     text-decoration: none;
-    font-size: 16px;
+    font-size: 18px;
     border-radius: 5px;
+    transition: all .2s ease-in-out;
+}
+
+
+.social-item .social-link-facebook:hover {
+  background: #f1c40f;
 }
     
 
@@ -111,16 +108,17 @@ h2,h3,h4,h5,h6,p {
 
 /* 2.Hero Section */
 
+
 .hero-box {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     width: 100%;
-    height: 800px;
+    height: 100%;
 }
 
 .hero-box .left-box {
     max-width: 100%;
-    height: 750px;
+    height: 100%;
 }
 
 .hero-box .left-box img {
@@ -128,11 +126,82 @@ h2,h3,h4,h5,h6,p {
     height: 750px;
 }
 
-.hero-box .right-box .text-box {
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
+.hero-box .right-box {
+    max-width: 100%;
+    height: 100%;
+}
+
+.hero-box .right-box .bio-box {
+    background: #ffffff;
+    color: #1c1c1c;
+    text-align: left;
+    height: 250px;
+    padding: 1rem 3rem;
+}
+
+.hero-box .right-box .bio-box h2 {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1.8rem;
+    font-weight: 800;
+    margin: 1rem 0rem;
 }
 
 
+.hero-box .right-box .bio-box h3 {
+    font-family: 'Lato', sans-serif;
+    font-size: 0.8rem;
+    font-weight: 500;
+    margin: 1rem 0rem;
+}
+
+
+.hero-box .right-box .bio-box p {
+    font-family: 'Lato', sans-serif;
+    line-height: 25px;
+    text-align: justify;
+}
+
+
+
+.hero-box .right-box .text-box {
+    background: linear-gradient(90deg, rgba(1, 17, 64, 0.55) 0%, rgba(1, 17, 64, 0.53) 0%), url('/Images/house1-miyah.jpg');
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 500px;
+   
+}
+
+
+.hero-box .right-box .text-box .box-1 {
+    text-align: center;
+    padding: 10rem 2rem;
+}
+
+.hero-box .right-box .text-box .box-1 p {
+    font-family: 'Lato', sans-serif;
+    text-align: center;
+    line-height: 30px;
+    color: #ffffff;
+    margin-bottom: 3rem;
+}
+
+.hero-box .right-box .text-box .box-1 .button {
+    background: #1c1c1c;
+    color: #ffffff;
+    padding: 1rem 2rem;
+    text-align: center;
+    text-decoration: none;
+   
+}
+
+
+
+
+
+
+/***********************************************************************/
+
+/* 3. About Section */
 
 
