--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,13 @@ Samiyah website
 1. Navbar
 2. Hero section
 
+Samiyah Jackson
+NJ Licensed Realtor
+C:347.740.4143
 
+Elite Intriago Realty
+721 Westfield Ave,
+Elizabeth, NJ 07208
 
 
 */
@@ -22,11 +28,7 @@ Samiyah website
 
 /* global classes */
 
-.container {
-    max-width: 100%;
-    padding: 0;
-    margin: 0;
-}
+
 .container-fluid {
     padding-left: 0;
 }
@@ -34,8 +36,24 @@ Samiyah website
 body {
     margin: 0;
     padding: 0;
-    background-color: #706B6B;
+   
 }
+
+.button {
+    background: #000000;
+    color: #ffffff;
+    padding: 1rem 2rem;
+    text-align: center;
+    text-decoration: none;
+    font-family: 'Open Sans', sans-serif;
+    transition: all .2s ease-in-out;
+}
+
+.button:hover {
+    background: #222222;
+   color: #f1c40f;
+}
+
 
 
 /***********************************************************************/
@@ -65,8 +83,8 @@ body {
 .navbar-nav .nav-item .nav-link {
     color: #ffffff;
     font-size: 1rem;
-    font-family: 'Lato', sans-serif;
-    font-weight: 600;
+    font-family: 'Open Sans', sans-serif;
+   
 }
 
 .navbar-nav .nav-item .nav-link:hover {
@@ -76,29 +94,6 @@ body {
     color: #f1c40f;
 }
 
-.divider {
-    border-right: 1px solid white;
-}
-
-.social-item {
-    margin-top: 5px;
-    margin-left: 12px;
-}
-
-.social-item .social-link-facebook {
-    background: #ffffff;
-    color:#011140;
-    padding: 0.6rem 0.8rem;
-    text-decoration: none;
-    font-size: 18px;
-    border-radius: 5px;
-    transition: all .2s ease-in-out;
-}
-
-
-.social-item .social-link-facebook:hover {
-  background: #f1c40f;
-}
     
 
 
@@ -118,17 +113,17 @@ body {
 
 .hero-box .left-box {
     max-width: 100%;
-    height: 100%;
+    height: 800px;
 }
 
 .hero-box .left-box img {
     width: 100%;
-    height: 750px;
+    height: 830px;
 }
 
 .hero-box .right-box {
-    max-width: 100%;
-    height: 100%;
+    width: 100%;
+    height: 800px;
 }
 
 .hero-box .right-box .bio-box {
@@ -136,64 +131,57 @@ body {
     color: #1c1c1c;
     text-align: left;
     height: 250px;
-    padding: 1rem 3rem;
+    padding: 2rem 3rem;
 }
 
 .hero-box .right-box .bio-box h2 {
     font-family: 'Open Sans', sans-serif;
-    font-size: 1.8rem;
-    font-weight: 800;
+    font-size: 32px;
+    font-weight: 600;
     margin: 1rem 0rem;
 }
 
 
 .hero-box .right-box .bio-box h3 {
-    font-family: 'Lato', sans-serif;
-    font-size: 0.8rem;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
     font-weight: 500;
     margin: 1rem 0rem;
 }
 
 
 .hero-box .right-box .bio-box p {
-    font-family: 'Lato', sans-serif;
-    line-height: 25px;
+    font-family: 'Open Sans', sans-serif;
+    line-height: 28px;
     text-align: justify;
 }
 
 
 
 .hero-box .right-box .text-box {
-    background: linear-gradient(90deg, rgba(1, 17, 64, 0.55) 0%, rgba(1, 17, 64, 0.53) 0%), url('/Images/house1-miyah.jpg');
+    background: linear-gradient(90deg, #c218186b 0%,#c21818ab 0%), url('/Images/house1-miyah.jpg');
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
-    height: 500px;
-   
+    height: 800px;
 }
 
 
 .hero-box .right-box .text-box .box-1 {
     text-align: center;
-    padding: 10rem 2rem;
+    padding: 10rem 3.5rem;
 }
+
 
 .hero-box .right-box .text-box .box-1 p {
     font-family: 'Lato', sans-serif;
     text-align: center;
-    line-height: 30px;
+    line-height: 32px;
     color: #ffffff;
     margin-bottom: 3rem;
+    font-size: 18px;
 }
 
-.hero-box .right-box .text-box .box-1 .button {
-    background: #1c1c1c;
-    color: #ffffff;
-    padding: 1rem 2rem;
-    text-align: center;
-    text-decoration: none;
-   
-}
 
 
 
@@ -204,4 +192,343 @@ body {
 
 /* 3. About Section */
 
+#featured-properties {
+    background: #ffffff;
+    height: 400px;
+}
 
+#featured-properties .property-box {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    width: 100%;
+    height: 100%;
+}
+
+#featured-properties .property-box .img-box {
+    height: 100%;
+}
+
+#featured-properties .property-box .img-box img {
+    width: 100%;
+    height: 100%;
+}
+
+#featured-properties .property-box .text-box {
+    background: #ffffff;
+    padding: 3rem;
+    
+}
+
+#featured-properties .property-box .text-box .box-1 h2 {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 32px;
+    font-weight: 600;
+   
+}
+
+
+#featured-properties .property-box .text-box .box-1 h3 {
+
+    font-family: 'Lato', sans-serif;
+    margin: 1rem 0rem;
+    font-size: 16px;
+    
+
+    
+}
+
+
+#featured-properties .property-box .text-box .box-1 p {
+    font-family: 'Lato', sans-serif;
+    font-size: 16px;
+    line-height: 30px;
+    margin-bottom: 1rem;
+}
+
+
+#featured-properties .property-box .text-box .box-1 .button {
+  
+    font-family: 'Lato', sans-serif;
+    text-align: center;
+    font-size: 16px;
+    margin: 0 auto;
+    
+
+    
+}
+
+#featured-properties .property-box .text-box .box-1 .icons {
+    display: flex;
+    margin-bottom: 3rem;
+}
+
+#featured-properties .property-box .text-box .box-1 .icons li {
+    margin: 0rem 0.5rem;
+}
+
+
+#featured-properties .property-box .text-box .box-1 .icons li img{
+   width: 40px;
+   height: 40px;
+
+}
+
+
+/***********************************************************************/
+
+/* 4. MLS Section */
+
+
+
+#MLS-Search {
+    background: linear-gradient(90deg, rgba(1, 17, 64, 0.55) 0%, rgba(1, 17, 64, 0.678) 0%), url('/Images/house-1.jpeg');
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 500px;
+}
+
+
+.MLS-box {
+    width: 100%;
+    height: 100%;
+    padding: 10rem 14rem;
+    text-align: center;
+}
+
+
+.MLS-box h2 {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 40px;
+    font-weight: 600;
+    color: #ffffff;
+    margin-bottom: 1rem;
+  
+}
+
+.MLS-box p {
+    font-family: 'Lato', sans-serif;
+    font-size: 16px;
+    line-height: 32px;
+    color: #ffffff;
+    margin-bottom: 3rem;
+}
+
+/***********************************************************************/
+
+
+/* 4. Testimonials Section */
+
+#Testimonials {
+    background: #ffffff;
+    height: 300px;
+}
+
+.title-box {
+  max-width: 100%;
+  text-align: center;
+}
+
+
+.title-box h2 {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 2.5rem;
+    text-transform: uppercase;
+    font-weight: 800;
+    margin-top: 3rem;
+ }
+
+.swiper-container {
+    width: 100%;
+    height: 200px;
+  }
+
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+  }
+
+  .swiper-slide p {
+     font-family: 'Lato', sans-serif;
+     font-size: 1rem;
+     padding: 0rem 5rem;
+     line-height: 30px;
+  }
+
+  .swiper-pagination-bullet {
+    width: 20px;
+    height: 20px;
+    font-family: 'Open Sans', sans-serif;
+    text-align: center;
+    line-height: 20px;
+    font-size: 12px;
+    color: #000;
+    opacity: 1;
+    background: rgba(0, 0, 0, 0.2);
+    outline: none;
+  }
+
+  .swiper-pagination-bullet-active {
+    color: #fff;
+    background: #011140;
+  }
+
+  /***********************************************************************/
+/* 5. Contact Section */
+
+#contact {
+    width: 100%;
+    height: 300px;
+    margin-bottom: 2rem;
+    text-align: right;
+}
+
+.title-box {
+    margin-bottom: 2rem;
+}
+
+.contact-box {
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    height: 100%;
+    width: 100%;
+    margin-top: 4rem;
+}
+
+.contact-box .message-box .mb-3 textarea {
+    outline-style: none;
+    box-shadow: none;
+    border: 1px solid black;
+    height: 170px;
+    font-family: 'Open Sans', sans-serif;
+    color: #000000;
+    text-transform: capitalize;
+    font-weight: 600;
+   
+}
+
+.message-box {
+    margin-right: 1rem;
+}
+
+.input-box {
+    margin-left: 1rem;
+}
+
+.input-box input[type="text"] {
+    height: 50px;
+    margin-bottom: 10px;
+    font-family: 'Open Sans', sans-serif;
+    color: #000000;
+    text-align: right;
+    font-weight: 600;
+    border: none;
+    border-bottom: 1px solid black;
+    outline-style: none;
+    box-shadow: none;
+    background: #ffffff;
+    text-transform: capitalize;
+}
+
+.input-box input[type="email"]  {
+    height: 50px;
+    margin-bottom: 10px;
+    font-family: 'Open Sans', sans-serif;
+    color: #000000;
+    text-align: right;
+    font-weight: 600;
+    border: none;
+    border-bottom: 1px solid black;
+    outline-style: none;
+    box-shadow: none;
+    background: #ffffff;
+    text-transform: capitalize;
+}
+
+
+.form-control {
+    border-radius: 0;
+    padding-left: 10px;
+}
+
+
+
+
+/***********************************************************************/
+
+/* 6. Footer Section */
+
+footer {
+    background: #011140;
+    color: #ffffff;
+    width: 100%;
+    height: 300px;
+}
+
+.links {
+    padding-top: 4rem;
+    margin-bottom: 2rem;
+}
+
+.links li  {
+    font-family: 'Lato', sans-serif;
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+.links li a {
+    font-family: 'Lato', sans-serif;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: #ffffff;
+    margin-bottom: 0.5rem;
+    transition: all .2s ease-in-out;
+}
+
+.links li a:hover {
+    color: #f1c40f;
+}
+
+.social-links {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+.social-links .social-link {
+    background: #ffffff;
+    width: 40px;
+    height: 40px;
+    padding: 0.5rem 0.5rem;
+    margin: 0 1rem;
+    transition: all .2s ease-in-out;
+}
+
+
+
+.social-links .social-link:hover {
+   background: #f1c40f;
+}
+
+
+
+.social-links .social-link img {
+    width: 25px;
+    height: 25px;
+}
