--- a/css/main.css
+++ b/css/main.css
@@ -59,9 +59,22 @@ body {
 /***********************************************************************/
 /* 1.Navbar Section */
 
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 999;
+}
+
+.sticky + .content {
+    padding-top: 70px;
+  }
+
+
+
 .custom-navbar {
-    background-color: #011140;
-    padding: 1.5rem 1rem;
+     background-color: #011140;
+     padding: 1.5rem 1rem;
 }
 
 .navbar-brand {
@@ -90,12 +103,12 @@ body {
 .navbar-nav .nav-item .nav-link:hover {
     color: #f1c40f;
 }
+
 .navbar-nav .nav-link.active {
     color: #f1c40f;
 }
 
     
-
 
 
 
@@ -182,9 +195,15 @@ body {
     font-size: 18px;
 }
 
+.navbar-toggler {
+    background: #ffffff;
+    
+}
 
 
-
+.navbar-toggler .navbar-toggler-icon {
+    color: #000000;
+}
 
 
 
@@ -308,7 +327,7 @@ body {
 
 .MLS-box p {
     font-family: 'Lato', sans-serif;
-    font-size: 16px;
+    font-size: 18px;
     line-height: 32px;
     color: #ffffff;
     margin-bottom: 3rem;
@@ -531,4 +550,607 @@ footer {
 .social-links .social-link img {
     width: 25px;
     height: 25px;
+}
+
+/***********************************************************************/
+
+
+
+/* 7. responsive Section */
+
+@media screen and (max-width: 1100px) {
+    .hero-box .right-box .text-box .box-1 {
+        text-align: center;
+        padding: 10rem 2.5rem;
+    }
+
+    .MLS-box {
+        width: 100%;
+        height: 100%;
+        padding: 10rem 11rem;
+        text-align: center;
+    }
+}
+
+
+@media screen and (max-width: 999px) {
+
+    .hero-box {
+        height: 670px;
+    }
+
+
+    .hero-box .right-box .bio-box {
+        padding: 1.2rem 1.4rem;
+    }
+
+
+    .hero-box .right-box .text-box .box-1 {
+        text-align: center;
+        padding: 2.5rem 1rem;
+    }
+
+    .hero-box .right-box .text-box .box-1 p {
+        font-size: 16px;
+    }
+
+    .hero-box .left-box img {
+        width: 100%;
+        height: 600px;
+    }
+
+    .hero-box .right-box .text-box {
+        height: 350px;
+    }
+
+    #featured-properties {
+        background: #ffffff;
+        height: 380px;
+    }
+
+    #featured-properties .property-box .text-box .box-1 .button {
+        font-family: 'Lato', sans-serif;
+        text-align: center;
+        font-size: 14px;
+        margin: 0 auto;
+    }
+
+    #featured-properties .property-box .text-box .box-1 .icons li img {
+        width: 30px;
+        height: 30px;
+    }
+
+    #featured-properties .property-box .img-box {
+        height: 380px;
+    }
+
+    #featured-properties .property-box .text-box {
+        background: #ffffff;
+        padding: 1.2rem;
+        height: 350px;
+    }
+
+    #featured-properties .property-box .text-box .box-1 h2 {
+        font-size: 25px;
+    }
+
+    #featured-properties .property-box .text-box .box-1 p {
+        margin-bottom: 0.5rem;
+    }
+
+    #featured-properties .property-box .text-box .box-1 p {
+        font-family: 'Lato', sans-serif;
+        font-size: 14px;
+        line-height: 30px;
+        margin-bottom: 1rem;
+    }
+
+    #featured-properties .property-box .text-box .box-1 .icons {
+        display: flex;
+        margin-bottom: 1.8rem;
+    }
+
+    #MLS-Search {
+        background: linear-gradient(90deg, rgba(1, 17, 64, 0.55) 0%, rgba(1, 17, 64, 0.678) 0%), url(/Images/house-1.jpeg);
+        background-position: center center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        height: 400px;
+    }
+
+    .MLS-box {
+        width: 100%;
+        height: 100%;
+        padding: 5rem 5rem;
+        text-align: center;
+    }
+
+    .swiper-slide p {
+        font-family: 'Lato', sans-serif;
+        font-size: 1rem;
+        padding: 0rem 3rem;
+        line-height: 30px;
+    }
+
+    
+}
+
+
+
+@media screen and (max-width: 764px) {
+
+    .hero-box {
+        height: 600px;
+    }
+
+    .hero-box .right-box .bio-box {
+        height: 250px;
+        padding: 0.8rem 0.8rem;
+    }
+
+    .hero-box .right-box .bio-box h2 {
+        font-size: 24px;
+    }
+
+    .hero-box .right-box .bio-box h3 {
+        font-size: 12px;
+    }
+
+
+    .hero-box .right-box .text-box .box-1 {
+        text-align: center;
+        padding: 1rem 1rem;
+        
+    }
+
+    .hero-box .right-box .text-box .box-1 p {
+        font-size: 13px;
+        line-height:20px;
+    }
+
+    .button {
+        font-size: 14px;
+        padding: 1.2rem 1.2rem;
+        
+   
+    }
+
+    .hero-box .left-box img {
+        width: 100%;
+        height: 530px;
+    }
+
+    .hero-box .right-box .bio-box p {
+        font-size: 14px;
+        line-height: 23px;
+     
+    }
+
+    .hero-box .right-box .text-box {
+        height: 350px;
+    }
+
+    #featured-properties {
+        background: #ffffff;
+        height: 380px;
+    }
+
+    #featured-properties .property-box .text-box .box-1 .button {
+        font-family: 'Lato', sans-serif;
+        text-align: center;
+        font-size: 14px;
+        margin: 0 auto;
+    }
+
+    #featured-properties .property-box .text-box .box-1 .icons li img {
+        width: 30px;
+        height: 30px;
+    }
+
+    #featured-properties .property-box .img-box {
+        height: 380px;
+    }
+
+    #featured-properties .property-box .text-box {
+        background: #ffffff;
+        padding: 1.2rem;
+        height: 350px;
+    }
+
+    #featured-properties .property-box .text-box .box-1 h2 {
+        font-size: 20px;
+    }
+
+    #featured-properties .property-box .text-box .box-1 h3 {
+        font-family: 'Lato', sans-serif;
+        margin: 1rem 0rem;
+        font-size: 11px;
+    }
+
+    #featured-properties .property-box .text-box .box-1 p {
+        margin-bottom: 0.5rem;
+    }
+
+    #featured-properties .property-box .text-box .box-1 p {
+        font-size: 13px;
+        line-height: 25px;
+    }
+
+    #featured-properties .property-box .text-box .box-1 .icons {
+        display: flex;
+        margin-bottom: 1.8rem;
+    }
+
+    #MLS-Search {
+        background: linear-gradient(90deg, rgba(1, 17, 64, 0.55) 0%, rgba(1, 17, 64, 0.678) 0%), url(/Images/house-1.jpeg);
+        background-position: center center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        height: 400px;
+    }
+
+    .MLS-box {
+        padding: 3rem 1rem;
+    }
+
+    .swiper-slide p {
+        font-family: 'Lato', sans-serif;
+        font-size: 1rem;
+        padding: 0rem 1.2rem;
+        line-height: 30px;
+    }
+
+    .swiper-slide {
+        width: 476px;
+        height: 160px;
+    }
+
+    .swiper-container {
+        width: 100%;
+        height: 220px;
+    }
+
+    .swiper-container-horizontal>.swiper-pagination-bullets, .swiper-pagination-custom, .swiper-pagination-fraction {
+        bottom: 10px;
+        left: 0;
+        width: 100%;
+    }
+
+
+}
+
+@media screen and (max-width: 500px) {
+
+    .hero-box {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        width: 100%;
+        height: 960px;
+        z-index:999;
+    }
+
+    
+
+    .hero-box .left-box {
+        max-width: 100%;
+        height: 460px;
+    }
+       
+
+    .hero-box .right-box .bio-box {
+        height: 210px;
+        padding: 0.8rem 0.8rem;
+    }
+
+    .hero-box .right-box .bio-box h2 {
+        font-size: 22px;
+    }
+
+    .hero-box .right-box .bio-box h3 {
+        font-size: 12px;
+    }
+
+
+    .hero-box .right-box .text-box .box-1 {
+        text-align: center;
+        padding: 1.2rem 1rem;
+        
+    }
+
+    .hero-box .right-box .text-box .box-1 p {
+        font-size: 14px;
+        line-height: 25px;
+        margin-bottom: 1.5rem;
+    
+    }
+
+    #featured-properties .property-box {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        width: 100%;
+        height: 100%;
+    }
+
+    .button {
+        font-size: 12px;
+        padding: 1rem 2rem;
+    }
+
+    .hero-box .left-box img {
+        width: 100%;
+        height: 450px;
+    }
+
+    .hero-box .right-box .bio-box p {
+        font-size: 14px;
+        line-height: 20px;
+    }
+
+    .hero-box .right-box .text-box {
+        height: 220px;
+    }
+
+    #featured-properties {
+        background: #ffffff;
+        height: 600px;
+    }
+
+    #featured-properties .property-box .text-box .box-1 .button {
+        font-family: 'Lato', sans-serif;
+        text-align: center;
+        font-size: 14px;
+        margin: 0 auto;
+    }
+
+    #featured-properties .property-box .text-box .box-1 .icons li img {
+        width: 30px;
+        height: 30px;
+    }
+
+
+    #featured-properties .property-box .img-box {
+        height: 300px;
+    }
+
+    #featured-properties .property-box .text-box {
+        background: #ffffff;
+        padding: 1.2rem;
+        height: 278px;
+    }
+
+    #featured-properties .property-box .text-box .box-1 h2 {
+        font-size: 22px;
+    }
+
+
+    #featured-properties .property-box .text-box .box-1 h3 {
+        font-family: 'Lato', sans-serif;
+        margin: 0.8rem 0rem;
+        font-size: 12px;
+    }
+
+
+    #featured-properties .property-box .text-box .box-1 p {
+        margin-bottom: 0.5rem;
+    }
+
+    #featured-properties .property-box .text-box .box-1 p {
+        font-size: 12px;
+        line-height: 20px;
+    }
+
+
+    #featured-properties .property-box .text-box .box-1 .icons {
+        display: flex;
+        margin-bottom: 1.8rem;
+    }
+
+    #MLS-Search {
+        background: linear-gradient(90deg, rgba(1, 17, 64, 0.55) 0%, rgba(1, 17, 64, 0.678) 0%), url(/Images/house-1.jpeg);
+        background-position: center center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        height: 450px;
+    }
+
+    .MLS-box {
+        padding: 3rem 1rem;
+    }
+
+    .swiper-slide p {
+        font-family: 'Lato', sans-serif;
+        font-size: 1rem;
+        padding: 0rem 1.2rem;
+        line-height: 30px;
+    }
+
+    .swiper-slide {
+        width: 476px;
+        height: 160px;
+    }
+
+    .swiper-container {
+        width: 100%;
+        height: 228px;
+    }
+
+    .swiper-container-horizontal>.swiper-pagination-bullets, .swiper-pagination-custom, .swiper-pagination-fraction {
+        bottom: 0px;
+        left: 0;
+        width: 100%;
+    }
+
+
+}
+
+
+@media screen and (max-width: 400px) {
+
+    .hero-box {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        width: 100%;
+        height: 1000px;
+        z-index:999;
+    }
+
+    
+
+    .hero-box .left-box {
+        max-width: 100%;
+        height: 460px;
+    }
+       
+
+    .hero-box .right-box .bio-box {
+        height: 210px;
+        padding: 0.8rem 0.8rem;
+    }
+
+    .hero-box .right-box .bio-box h2 {
+        font-size: 22px;
+    }
+
+    .hero-box .right-box .bio-box h3 {
+        font-size: 12px;
+    }
+
+
+    .hero-box .right-box .text-box .box-1 {
+        text-align: center;
+        padding: 1.2rem 1rem;
+        
+    }
+
+    .hero-box .right-box .text-box .box-1 p {
+        font-size: 14px;
+        line-height: 25px;
+        margin-bottom: 1.5rem;
+    
+    }
+
+    #featured-properties .property-box {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        width: 100%;
+        height: 100%;
+    }
+
+    .button {
+        font-size: 12px;
+        padding: 1rem 2rem;
+    }
+
+    .hero-box .left-box img {
+        width: 100%;
+        height: 450px;
+    }
+
+    .hero-box .right-box .bio-box p {
+        font-size: 14px;
+        line-height: 20px;
+    }
+
+    .hero-box .right-box .text-box {
+        height: 260px;
+    }
+
+    #featured-properties {
+        background: #ffffff;
+        height: 600px;
+    }
+
+    #featured-properties .property-box .text-box .box-1 .button {
+        font-family: 'Lato', sans-serif;
+        text-align: center;
+        font-size: 14px;
+        margin: 0 auto;
+    }
+
+    #featured-properties .property-box .text-box .box-1 .icons li img {
+        width: 30px;
+        height: 30px;
+    }
+
+
+    #featured-properties .property-box .img-box {
+        height: 300px;
+    }
+
+    #featured-properties .property-box .text-box {
+        background: #ffffff;
+        padding: 1.2rem;
+        height: 278px;
+    }
+
+    #featured-properties .property-box .text-box .box-1 h2 {
+        font-size: 22px;
+    }
+
+
+    #featured-properties .property-box .text-box .box-1 h3 {
+        font-family: 'Lato', sans-serif;
+        margin: 0.8rem 0rem;
+        font-size: 12px;
+    }
+
+
+    #featured-properties .property-box .text-box .box-1 p {
+        margin-bottom: 0.5rem;
+    }
+
+    #featured-properties .property-box .text-box .box-1 p {
+        font-size: 12px;
+        line-height: 20px;
+    }
+
+
+    #featured-properties .property-box .text-box .box-1 .icons {
+        display: flex;
+        margin-bottom: 1.8rem;
+    }
+
+    #MLS-Search {
+        background: linear-gradient(90deg, rgba(1, 17, 64, 0.55) 0%, rgba(1, 17, 64, 0.678) 0%), url(/Images/house-1.jpeg);
+        background-position: center center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        height: 450px;
+    }
+
+    .MLS-box {
+        padding: 3rem 1rem;
+    }
+
+    .swiper-slide p {
+        font-family: 'Lato', sans-serif;
+        font-size: 1rem;
+        padding: 0rem 1.2rem;
+        line-height: 30px;
+    }
+
+    .MLS-box p {
+        font-family: 'Lato', sans-serif;
+        font-size: 16px;
+        line-height: 32px;
+        color: #ffffff;
+        margin-bottom: 2rem;
+    }
+
+    .swiper-slide {
+        width: 476px;
+        height: 160px;
+    }
+
+    .swiper-container {
+        width: 100%;
+        height: 228px;
+    }
+
+    .swiper-container-horizontal>.swiper-pagination-bullets, .swiper-pagination-custom, .swiper-pagination-fraction {
+        bottom: 0px;
+        left: 0;
+        width: 100%;
+    }
+
 }
