--- a/css/main.css
+++ b/css/main.css
@@ -412,7 +412,7 @@ body {
 
 #contact {
     width: 100%;
-    height: 300px;
+    height: 350px;
     margin-bottom: 2rem;
     text-align: right;
 }
@@ -485,7 +485,9 @@ body {
     padding-left: 10px;
 }
 
-
+.btn-submit {
+    margin-top: 30px;
+}
 
 
 /***********************************************************************/
