--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,11 @@ Elite Intriago Realty
 Elizabeth, NJ 07208
 
 
-*/
+
+/* 
+
+
+
 
 
 
@@ -52,6 +56,26 @@ body {
 .button:hover {
     background: #222222;
    color: #f1c40f;
+}
+
+.alert-danger {
+    font-family: 'Open Sans', sans-serif;
+    color: #842029;
+    background-color: #f8d7da;
+    border-color: #f5c2c7;
+    font-size: 16px;
+    text-align: center;
+
+}
+
+.alert-success {
+    font-family: 'Open Sans', sans-serif;
+    color: #3c763d;
+    background-color: #dff0d8;
+    border-color: #d6e9c6;
+    font-size: 16px;
+    text-align: center;
+
 }
 
 
@@ -279,10 +303,12 @@ body {
 #featured-properties .property-box .text-box .box-1 .icons {
     display: flex;
     margin-bottom: 3rem;
+    padding: 0;
 }
 
 #featured-properties .property-box .text-box .box-1 .icons li {
     margin: 0rem 0.5rem;
+    list-style: none;
 }
 
 
@@ -412,7 +438,7 @@ body {
 
 #contact {
     width: 100%;
-    height: 350px;
+    height: 450px;
     margin-bottom: 2rem;
     text-align: right;
 }
@@ -490,6 +516,8 @@ body {
 }
 
 
+
+
 /***********************************************************************/
 
 /* 6. Footer Section */
@@ -510,6 +538,7 @@ footer {
     font-family: 'Lato', sans-serif;
     text-align: center;
     margin-bottom: 1rem;
+    list-style-type: none;
 }
 
 .links li a {
@@ -539,6 +568,7 @@ footer {
     padding: 0.5rem 0.5rem;
     margin: 0 1rem;
     transition: all .2s ease-in-out;
+    list-style-type: none;
 }
 
 
@@ -827,7 +857,7 @@ footer {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
         width: 100%;
-        height: 960px;
+        height: 1000px;
         z-index:999;
     }
 
@@ -835,12 +865,17 @@ footer {
 
     .hero-box .left-box {
         max-width: 100%;
-        height: 460px;
+        height: 570px;
+    }
+
+    .hero-box .right-box {
+        width: 100%;
+        height: 900px;
     }
        
 
     .hero-box .right-box .bio-box {
-        height: 210px;
+        height: 180px;
         padding: 0.8rem 0.8rem;
     }
 
@@ -880,7 +915,7 @@ footer {
 
     .hero-box .left-box img {
         width: 100%;
-        height: 450px;
+        height: 570px;
     }
 
     .hero-box .right-box .bio-box p {
@@ -895,6 +930,7 @@ footer {
     #featured-properties {
         background: #ffffff;
         height: 600px;
+        text-align: center;
     }
 
     #featured-properties .property-box .text-box .box-1 .button {
@@ -945,6 +981,7 @@ footer {
     #featured-properties .property-box .text-box .box-1 .icons {
         display: flex;
         margin-bottom: 1.8rem;
+        justify-content: center;
     }
 
     #MLS-Search {
@@ -952,7 +989,7 @@ footer {
         background-position: center center;
         background-size: cover;
         background-repeat: no-repeat;
-        height: 450px;
+        height: 360px;
     }
 
     .MLS-box {
@@ -968,7 +1005,7 @@ footer {
 
     .swiper-slide {
         width: 476px;
-        height: 160px;
+        height: 180px;
     }
 
     .swiper-container {
@@ -980,6 +1017,28 @@ footer {
         bottom: 0px;
         left: 0;
         width: 100%;
+    }
+
+    #contact {
+        width: 100%;
+        height: 700px;
+        margin-bottom: 2rem;
+        text-align: right;
+    }
+
+    .contact-box {
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        height:500px;
+        width: 100%;
+        margin-top: 4rem;
+    }
+
+    .input-box {
+        margin-left: 0rem;
+    }
+    .message-box {
+        margin-right: 0rem;
     }
 
 
