--- a/css/main.css
+++ b/css/main.css
@@ -203,7 +203,9 @@ body {
     color: #000000;
 }
 
-
+.logo {
+    width: 120px;
+}
 
 /***********************************************************************/
 
